--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,26 @@
       <version>2.3.2</version>
       <!--<scope>provided</scope>-->
     </dependency>
+    <dependency>
+      <groupId>org.rogach</groupId>
+      <artifactId>scallop_2.11</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-actor_2.11</artifactId>
+      <version>2.5.17</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.finagle</groupId>
+      <artifactId>finch-core_2.11</artifactId>
+      <version>0.18.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.liftweb</groupId>
+      <artifactId>lift-json_2.11</artifactId>
+      <version>3.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
